# dummy_lib

./: README.md  pyproject.toml  requirements.txt  setup.py
dummy_lib/: test.py
dummy_lib/pkgs/libs/: funcs.py
util_data/: ancillary_ascii.txt
